tests/invalid/invalid-019.inox
Module Invalid019

Main() :
    var X := bitnot "abc"
;
